# gear-memory

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml  contracts.yml
bench/storage-bench/: Cargo.toml
bench/storage-bench/src/: main.rs
docs/: dogfooding.md
docs/adr/: 0001-scope-and-upstream-policy.md  0002-sqlite-code-index.md
examples/: contract_validation.rs
scripts/: dogfood-benchmark.sh
src/: lib.rs  main.rs  sqlite.rs
tests/: cli_index_commands.rs  cli_rfc3339_timestamp.rs  dogfooding_repo_codemap.rs  fixture_generator.rs  gear_memory_bundle_contract.rs  harness_handoff_contract.rs  sqlite_index_queries.rs  stage0_store_and_lookups.rs  store_contract_suite.rs
tests/fixtures/: gear-memory-minimal.valid.json  gear-memory-repo-codemap.valid.json  gear-memory-secret-metadata.invalid.json
