[package]
name = "gear-memory"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/constantin-jais/gear-memory"
description = "Local agentic context layer: code map, repo memory, and document/search substrate for coding agents."

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["parsing", "formatting"] }

[dev-dependencies]
tempfile = "3"
